<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_cartesian_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="oafolay2@jh.edu">seyi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ur_description</depend>
  <depend>se3_sensor_driver</depend>
  <depend>tf2_ros</depend>
  <depend>controller_manager</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros2_control</depend>
  <depend>ign_ros2_control</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>hardware_interface</depend>
  <depend>tf2_geometry_msgs</depend>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2_controllers_cartesian</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
