<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plc_ros2_bridge</name>
  <version>0.1.0</version>
  <description>
    Vendor-neutral ros2_control hardware interface for bridging ROS 2 adaptive robotics
    with legacy PLC-governed industrial control systems. Supports EtherNet/IP (Allen-Bradley)
    and OPC UA (vendor-neutral) protocols with a configurable safety validation layer.
  </description>
  <maintainer email="oafolay2@jh.edu">Seyi R. Afolayan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
